feat(data-1513): add useOriginalId feature in LAMASSU and use MDM to generate super ids (disabled by default)
* it is now possible to retrieve GBFS feeds with productor/original IDs
* it is now possible to generate GBFS super ids using MDM (profile MDM must be active)
* add testcontainers to start activemq broker during integration tests